Amend li styling and add a year component

--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
       </div>
 
       <div class="form-item">
-        <label for="colour" class="primary">colour</label>
+        <label for="colour" class="primary">Colour</label>
         <input type="text" id="colour" required/>
+      </div>
+
+      <div class="form-item">
+        <label for="purchaseDate" class="primary">Purchased</label>
+        <input type="month" id="purchaseDate" required/>
       </div>
 
       <div class="form-item">
