Add background image which I'll probably remove

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Instrument Database</title>
+    <link href="https://fonts.googleapis.com/css?family=Lacquer&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <script src="js/app.js"></script>
   </head>
@@ -35,7 +36,7 @@
         </select>
       </div>
     </div>
-    <input type="submit" value="save"/>
+    <input class="save" type="submit" value="save"/>
   </form>
   <button id="delete-all">Delete All</button>
   <h1>Instrument List</h1>
