--- a/index.html
+++ b/index.html
@@ -8,21 +8,12 @@
     <script src="js/app.js"></script>
   </head>
   <body>
+    <h1>Instrument List</h1>
     <form id="new-item-form">
     <div id="form-wrapper">
       <div class="form-item">
         <label for="model" class="primary">Model</label>
         <input type="text" id="model" required/>
-      </div>
-
-      <div class="form-item">
-        <label for="colour" class="primary">Colour</label>
-        <input type="text" id="colour" required/>
-      </div>
-
-      <div class="form-item">
-        <label for="purchaseDate" class="primary">Purchased</label>
-        <input type="month" id="purchaseDate" required/>
       </div>
 
       <div class="form-item">
@@ -34,12 +25,23 @@
           <option value="Mandolin">Mandolin</option>
           <option value="Banjo">Banjo</option>
         </select>
+        </div>
+
+      <div class="form-item">
+        <label for="colour" class="primary">Colour</label>
+        <input type="text" id="colour" required/>
+      </div>
+
+      <div class="form-item">
+        <label for="purchaseDate" class="primary">Purchased</label>
+        <input type="month" name="Purchased" id="purchaseDate" min="1989-12" required/>
       </div>
     </div>
     <input class="save" type="submit" value="save"/>
+    <div>
+    <button id="delete-all">Delete All</button>
+   </div>
+    <div id="instrument-list"></div>
   </form>
-  <button id="delete-all">Delete All</button>
-  <h1>Instrument List</h1>
-  <div id="instrument-list"></div>
   </body>
 </html>
